--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 				<div class="container hero-box">
 					<div class="hero-box__content">
 						<p class="hero-box__subtitle">Chase the new Flavour</p>
-						<h1 class="hero-box__title">The key to Fine dining</h1>
+						<h1 class="hero-box__title">The key to Fine dining!</h1>
 						<p class="hero-box__descr">Sit tellus lobortis sed senectus vivamus molestie. Condimentum
 							volutpat morbi facilisis quam scelerisque sapien. Et,
 							penatibus aliquam amet tellus</p>
