Add section about

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 </head>
 
 <body>
+	<!-- header -->
 	<header class="header">
 		<div class="big-container">
 			<div class="header__inner">
@@ -38,6 +39,8 @@
 			</div>
 		</div>
 	</header>
+	<!-- end header -->
+	<!-- hero -->
 	<section class="hero">
 		<div class="big-container">
 			<div class="hero__wrapper">
@@ -56,7 +59,6 @@
 					</div>
 					<div class="hero-box__img">
 						<img src="assets/images/hero.jpg" alt="Main Image">
-						<!-- 620 x 690 -->
 					</div>
 				</div>
 
@@ -73,6 +75,33 @@
 			</div>
 		</div>
 	</section>
+	<!-- end hero -->
+	<!-- about -->
+	<section class="about">
+		<div class="container">
+			<div class="about__inner">
+				<div class="about__content about__content--text-right">
+					<h2 class="about__title about__title--right">About Us</h2>
+					<p class="about__descr">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quis pharetra
+						adipiscing ultrices vulputate posuere tristique.
+						In sed odio nec aliquet eu proin mauris et.</p>
+					<a class="about__btn btn" href="#">Know More</a>
+				</div>
+				<div class="about__img">
+					<img src="assets/knife.png" alt="">
+				</div>
+				<div class="about__content">
+					<h2 class="about__title about__title--left">Our History</h2>
+					<p class="about__descr">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quis
+						pharetra adipiscing
+						ultrices vulputate posuere tristique.
+						In sed odio nec aliquet eu proin mauris et.</p>
+					<a class="about__btn btn" href="#">Know More</a>
+				</div>
+			</div>
+		</div>
+	</section>
+	<!-- end about -->
 
 	<script src="js/scrypt.js"></script>
 </body>
