Add section menu

--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
 				</div>
 				<div class="container hero-box">
 					<div class="hero-box__content">
-						<p class="hero-box__subtitle">Chase the new Flavour</p>
-						<h1 class="hero-box__title">The key to Fine dining!</h1>
+						<p class="subtitle hero-box__subtitle">Chase the new Flavour</p>
+						<h1 class="title hero-box__title">The key to Fine dining!</h1>
 						<p class="hero-box__descr">Sit tellus lobortis sed senectus vivamus molestie. Condimentum
 							volutpat morbi facilisis quam scelerisque sapien. Et,
 							penatibus aliquam amet tellus</p>
@@ -71,7 +71,7 @@
 					<p>03</p>
 					<p>04</p>
 				</div>
-				<span class="hero__scroll-text">Scroll</span>
+				<a href="#" class="hero__scroll-text">Scroll</a>
 			</div>
 		</div>
 	</section>
@@ -81,7 +81,7 @@
 		<div class="container">
 			<div class="about__inner">
 				<div class="about__content about__content--text-right">
-					<h2 class="about__title about__title--right">About Us</h2>
+					<h2 class="title about__title about__title--right">About Us</h2>
 					<p class="about__descr">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quis pharetra
 						adipiscing ultrices vulputate posuere tristique.
 						In sed odio nec aliquet eu proin mauris et.</p>
@@ -91,7 +91,7 @@
 					<img src="assets/knife.png" alt="">
 				</div>
 				<div class="about__content">
-					<h2 class="about__title about__title--left">Our History</h2>
+					<h2 class="title about__title about__title--left">Our History</h2>
 					<p class="about__descr">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quis
 						pharetra adipiscing
 						ultrices vulputate posuere tristique.
@@ -102,6 +102,116 @@
 		</div>
 	</section>
 	<!-- end about -->
+	<!-- menu -->
+	<section class="menu">
+		<div class="container">
+			<div class="menu__inner">
+				<p class="subtitle menu__subtitle">Menu that fits you palatte</p>
+				<h2 class="title menu__title">Today&apos;s Special</h2>
+				<!-- Today’s Special -->
+				<div class="menu-content">
+					<div class="menu-content__items">
+						<h3 class="title menu-content__title">Wine & Beer</h3>
+
+						<div class="menu-content__item">
+							<div class="menu-content__item-name">
+								<p class="title menu-content__item-title">Chapel Hill Shiraz</p>
+
+								<p class="menu-content__item-price">$56</p>
+							</div>
+							<p class="menu-content__item-descr">AU | Bottle</p>
+						</div>
+
+						<div class="menu-content__item">
+							<div class="menu-content__item-name">
+								<p class="title menu-content__item-title">Catena Malbec</p>
+								<p class="menu-content__item-price">$59</p>
+							</div>
+							<p class="menu-content__item-descr">AR | Bottle</p>
+						</div>
+
+						<div class="menu-content__item">
+							<div class="menu-content__item-name">
+								<p class="title menu-content__item-title">La Vieille Rosé</p>
+								<p class="menu-content__item-price">$44</p>
+							</div>
+							<p class="menu-content__item-descr">FR | 750 ml</p>
+						</div>
+
+						<div class="menu-content__item">
+							<div class="menu-content__item-name">
+								<p class="title menu-content__item-title">Rhino Pale Ale</p>
+								<p class="menu-content__item-price">$31</p>
+							</div>
+							<p class="menu-content__item-descr">CA | 750 ml</p>
+						</div>
+
+						<div class="menu-content__item">
+							<div class="menu-content__item-name">
+								<p class="title menu-content__item-title">Irish Guinness</p>
+								<p class="menu-content__item-price">$26</p>
+							</div>
+							<p class="menu-content__item-descr">IE | 750 ml</p>
+						</div>
+					</div>
+
+					<div class="menu-content__img">
+						<img src="assets/shaker.jpg" alt="">
+					</div>
+
+					<div class="menu-content__items">
+						<h3 class="title menu-content__title">Cocktails</h3>
+
+						<div class="menu-content__item">
+							<div class="menu-content__item-name">
+								<p class="title menu-content__item-title">Aperol Spritz</p>
+								<p class="menu-content__item-price">$20</p>
+							</div>
+							<p class="menu-content__item-descr">Aperol | Villa Marchesi prosecco | soda | 30ml</p>
+						</div>
+
+						<div class="menu-content__item">
+							<div class="menu-content__item-name">
+								<p class="title menu-content__item-title">Dark 'N' Stormy</p>
+								<p class="menu-content__item-price">$16</p>
+							</div>
+							<p class="menu-content__item-descr">Dark rum | Ginger beer | Slice of lime.</p>
+						</div>
+
+						<div class="menu-content__item">
+							<div class="menu-content__item-name">
+								<p class="title menu-content__item-title">Daiquiri</p>
+								<p class="menu-content__item-price">$10</p>
+							</div>
+							<p class="menu-content__item-descr">Rum | Citrus juice | Sugar</p>
+						</div>
+
+						<div class="menu-content__item">
+							<div class="menu-content__item-name">
+								<p class="title menu-content__item-title">Old Fashioned</p>
+								<p class="menu-content__item-price">$31</p>
+							</div>
+							<p class="menu-content__item-descr">Bourbon | Brown sugar | Angostura Bitters</p>
+						</div>
+
+						<div class="menu-content__item">
+							<div class="menu-content__item-name">
+								<p class="title menu-content__item-title">Negroni</p>
+								<p class="menu-content__item-price">$26</p>
+							</div>
+							<p class="menu-content__item-descr">Gin | Sweet Vermouth | Campari | Orange garnish</p>
+						</div>
+
+					</div>
+				</div>
+				<div class="menu__btn">
+
+					<a class="btn" href="#">View More</a>
+				</div>
+			</div>
+		</div>
+	</section>
+	<!-- end menu -->
 
 	<script src="js/scrypt.js"></script>
 </body>
