--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 				<div class="container hero-box">
 					<div class="hero-box__content">
 						<p class="subtitle hero-box__subtitle">Chase the new Flavour</p>
-						<h1 class="title hero-box__title">The key to Fine dining!</h1>
+						<h1 class="title hero-box__title">The key to Fine dining</h1>
 						<p class="hero-box__descr">Sit tellus lobortis sed senectus vivamus molestie. Condimentum
 							volutpat morbi facilisis quam scelerisque sapien. Et,
 							penatibus aliquam amet tellus</p>
@@ -212,6 +212,109 @@
 		</div>
 	</section>
 	<!-- end menu -->
+	<!-- chefs -->
+	<section class="cheffs">
+		<div class="container">
+			<div class="cheffs__inner">
+				<div class="cheffs__img">
+					<img src="assets/cheff.jpg" alt="Main Image">
+				</div>
+				<div class="cheffs__content">
+					<p class="subtitle cheffs__subtitle">Chase the new Flavour</p>
+					<h2 class="title cheffs__title">What we believe in</h2>
+					<p class="cheffs__descr"><span>Lorem ipsum dolor sit amet, consectetur adipiscing elit auctor
+							sit.</span> Auctor
+						sit iaculis in arcu. Vulputate nulla lobortis mauris eget sit. Nulla scelerisque scelerisque
+						congue ac consequat,
+						aliquam molestie lectus eu. Congue iaculis integer curabitur semper sit nunc.</p>
+
+					<p class="title cheffs__name">Kevin Luo</p>
+					<p class="cheffs__category">Chef & Founder</p>
+					<img class="signature" src="assets/signature.svg" alt="">
+				</div>
+
+			</div>
+		</div>
+	</section>
+	<!-- end chefs -->
+	<!-- costomers -->
+	<section class="costomers">
+		<div class="container">
+			<div class="costomers__inner">
+				<p class="subtitle costomers__subtitle">Testimony</p>
+				<h2 class="title costomers__title">Happy customers</h2>
+				<div class="costomers__content">
+
+					<div class="costomers__item">
+						<div class="costomers__item-img">
+							<img src="assets/images/costomer1.jpg" alt="Avatar">
+						</div>
+						<div class="costomers__item-text">
+							<p class="costomers__item-quote">Lorem ipsum dolor sit amet, consectetur adipiscing sit.
+								auctor
+								sit iaculis in arcu. Vulputate nulla lobortis mauris eget
+								sit. Nulla scelerisque scelerisque congue.</p>
+							<p class="costomers__item-name title">Wade Warren</p>
+							<p class="costomers__item-category">Sommelier</p>
+						</div>
+					</div>
+
+					<div class="costomers__item">
+						<div class="costomers__item-img">
+							<img src="assets/images/costomer2.jpg" alt="Avatar">
+						</div>
+						<div class="costomers__item-text">
+							<p class="costomers__item-quote">Lorem ipsum dolor sit amet, consectetur adipiscing sit.
+								auctor
+								sit iaculis in arcu. Vulputate nulla lobortis mauris eget
+								sit. Nulla scelerisque scelerisque congue.</p>
+							<p class="costomers__item-name title">Jane Cooper</p>
+							<p class="costomers__item-category">Chef</p>
+						</div>
+					</div>
+					<div class="costomers__item">
+						<div class="costomers__item-img">
+							<img src="assets/images/costomer3.jpg" alt="Avatar">
+						</div>
+						<div class="costomers__item-text">
+							<p class="costomers__item-quote">Lorem ipsum dolor sit amet, consectetur adipiscing sit.
+								auctor
+								sit iaculis in arcu. Vulputate nulla lobortis mauris eget
+								sit. Nulla scelerisque scelerisque congue.</p>
+							<p class="costomers__item-name title">Robert Fox</p>
+							<p class="costomers__item-category">Chef</p>
+						</div>
+					</div>
+					<div class="costomers__item">
+						<div class="costomers__item-img">
+							<img src="assets/images/costomer4.jpg" alt="Avatar">
+						</div>
+						<div class="costomers__item-text">
+							<p class="costomers__item-quote">Lorem ipsum dolor sit amet, consectetur adipiscing sit.
+								auctor
+								sit iaculis in arcu. Vulputate nulla lobortis mauris eget
+								sit. Nulla scelerisque scelerisque congue.</p>
+							<p class="costomers__item-name title">Brooklyn Simmons</p>
+							<p class="costomers__item-category">Caterer</p>
+						</div>
+					</div>
+
+				</div>
+			</div>
+		</div>
+	</section>
+	<!-- end costomers -->
+	<!-- video -->
+	<div class="video">
+		<video id="video">
+			<source src="assets/meal.mp4" type='video/mp4'>
+		</video>
+		<img class="video__poster" src="assets/poster.jpg" alt="">
+		<button class="video__play-btn">
+			<img src="assets/play.svg" alt="">
+		</button>
+	</div>
+	<!-- end video -->
 
 	<script src="js/scrypt.js"></script>
 </body>
