--- a/index.html
+++ b/index.html
@@ -315,6 +315,54 @@
 		</button>
 	</div>
 	<!-- end video -->
+	<!-- awards -->
+	<section class="awards">
+		<div class="container">
+			<div class="awards__inner">
+				<div class="awards__content-box">
+					<div class="awards__subtitle subtitle">Awards & recognition</div>
+					<h2 class="awards__title title">Our Laurels</h2>
+					<div class="awards__content">
+
+						<div class="awards__content-item">
+							<img class="awards__content-icon" src="assets/awards-icon1.svg" alt="">
+							<div class="awards__content-text">
+								<p class="awards__content-title title">Bib Gourmond</p>
+								<p class="awards__content-descr">Lorem ipsum dolor sit amet, consectetur.</p>
+							</div>
+						</div>
+
+						<div class="awards__content-item">
+							<img class="awards__content-icon" src="assets/awards-icon2.svg" alt="">
+							<div class="awards__content-text">
+								<p class="awards__content-title title">Rising Star</p>
+								<p class="awards__content-descr">Lorem ipsum dolor sit amet, consectetur.</p>
+							</div>
+						</div>
+						<div class="awards__content-item">
+							<img class="awards__content-icon" src="assets/awards-icon3.svg" alt="">
+							<div class="awards__content-text">
+								<p class="awards__content-title title">AA Hospitality</p>
+								<p class="awards__content-descr">Lorem ipsum dolor sit amet, consectetur.</p>
+							</div>
+						</div>
+						<div class="awards__content-item">
+							<img class="awards__content-icon" src="assets/awards-icon4.svg" alt="">
+							<div class="awards__content-text">
+								<p class="awards__content-title title">Outstanding Chef</p>
+								<p class="awards__content-descr">Lorem ipsum dolor sit amet, consectetur.</p>
+							</div>
+						</div>
+
+					</div>
+				</div>
+				<div class="awards__img">
+					<img src="assets/awards.jpg" alt="">
+				</div>
+			</div>
+		</div>
+	</section>
+	<!-- end awards -->
 
 	<script src="js/scrypt.js"></script>
 </body>
